# student-help-detector

./: Dockerfile  README.md  docker-compose.yml  logstash.conf  pyproject.toml  requirements.txt  systen draft.md
.github/workflows/: deploy-app.yml
.ipynb_checkpoints/: student-performance-checkpoint.ipynb
alembic/: env.py
app/: main.py
app/api/: endpoints.py
app/config/: container.py  settings.py
app/core/: student_report_service.py
app/data/entities/: models.py
app/data/repositories/: student_report_repository.py
model/model_versions/: linear_regression_model_2024-10-11-04-20.pkl
model/notebooks/: student-performance.ipynb
terraform/: main.tf  variables.tf
