[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["acastror26 <aurivancastror@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.22"
alembic = "^1.7.1"
psycopg2-binary = "^2.9.1"
dependency-injector = "^4.35.3"
pydantic = "^1.8.2"
elasticsearch = "^7.14.0"
logstash-formatter = "^0.5.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
